iac/kubernetes/net/virtual-service.yaml
apiVersion: networking.istio.io/v1
kind: VirtualService
metadata:
  name: pursit
  namespace: pursit
spec:
  hosts:
    - "pursit.ru"
  gateways:
    - pursit-gateway
  http:
    - match:
        - uri:
            prefix: /backend/core
      route:
        - destination:
            host: pursit-core
            port:
              number: 80
    - match:
        - uri:
            prefix: /backend/media
      route:
        - destination:
            host: pursit-media
            port:
              number: 80
    - match:
        - uri:
            prefix: /
      route:
        - destination:
            port:
              number: 80
            host: pursit-front
